--- a/src/components/InputAnnotation/InputAnnotation.module.css
+++ b/src/components/InputAnnotation/InputAnnotation.module.css
@@ -8,9 +8,7 @@
     top: 100%;
     left: 2px;
     color: #51525C;
-}
-.leftLabel{
-    width: 64px;
+    width: 100%
 }
 .darkmode{
     color: #A0A0AB;
