--- a/src/components/InputText/InputText.module.css
+++ b/src/components/InputText/InputText.module.css
@@ -4,15 +4,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    border: 1px solid #D1D1D6;
+    border: none ;
     border-radius: 5px;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
     background-color: transparent;
 }
 
 .leftPosititon {
-    width: 64px !important;
-    padding: 4px;
+    width: 45px !important;
+    box-sizing: border-box;
 }
 
 .inputContainer:has(.input:focus) {
@@ -23,16 +23,19 @@
 
 .search {
     display: block;
-    width: 25px;
-    height: 25px;
-    margin-right: 8px;
+    width: 16px;
+    height: 16px;
+    margin-right: 4px;
 }
 
 .shortkey {
-    display: block;
-    height: 25px;
-    width: 50px;
-    margin-left: 8px;
+    margin-left: 4px;
+    height: 16px ;
+    width: 24px ;
+}
+.helpIcon {
+    width: 16px;
+    height: 16px;
 }
 
 .input {
@@ -51,7 +54,7 @@
 }
 
 .error {
-    border-color: red;
+    border: 1px solid red !important;
 }
 
 
@@ -61,10 +64,7 @@
 }
 
 
-.helpIcon {
-    width: 25px;
-    height: 25px;
-}
+
 
 .errorIcon path {
     stroke: #ff0000;
@@ -77,8 +77,9 @@
     font-weight: 400;
     line-height: 20px;
     text-align: left;
+    height:24px;
 
-    padding: 0 8px;
+    padding:4px 8px;
 }
 
 .md {
@@ -88,6 +89,27 @@
     line-height: 20px;
     text-align: left;
     padding: 4px 8px;
+    height: 36px;
+}
+
+.md > .shortkey {
+    width: 40px;
+    height: 20px;
+    margin-right: 8px;
+}
+.md > .search {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+}
+.md > .helpIcon {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+}
+
+.leftPosititonContainer .md{
+    padding: 200px;
 }
 
 .lg {
@@ -97,8 +119,24 @@
     line-height: 24px;
     text-align: left;
     padding: 8px  10px;
+    height: 40px;
 }
 
+.lg > .shortkey {
+    width: 40px;
+    height: 24px;
+    margin-right: 8px;
+}
+.lg > .search {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+}
+.lg > .helpIcon {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+}
 .xl {
     font-family: Inter;
     font-size: 14px;
@@ -106,10 +144,26 @@
     line-height: 24px;
     text-align: left;
     padding: 10px;
+    height: 48px;
+}
+.xl > .shortkey {
+    width: 40px;
+    height: 28px;
+    margin-right: 8px;
+}
+.xl > .search {
+    width: 28px;
+    height: 28px;
+    margin-right: 8px;
+}
+.xl > .helpIcon {
+    width: 28px;
+    height: 28px;
+    margin-right: 8px;
 }
 
-.nonBorder{
-    border:none;
+.border{
+    border: 1px solid #D1D1D6;
 }
 
 .left{
@@ -119,24 +173,12 @@
     text-align: right;
 }
 
-.darkmode > .input, .input::placeholder{
+.darkmode > .input{
     color: #FAFAFA;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-.inputContainer.default {
+.border.default {
     border: 1px solid #D1D1D6;
 }
 
@@ -161,6 +203,7 @@
 }
 
 
+
 .inputContainer.error-focus:has(.input) {
     border-color: #ff0000;
     box-shadow: 0px 0px 8px rgb(255, 0, 0);
@@ -172,12 +215,7 @@
 }
 
 .inputContainer.disabled {
-    border-color: #cccccc;
-    cursor: not-allowed;
-}
-
-.input.disabled {
-    color: #a0a0a0;
+    border-color: #797979;
     cursor: not-allowed;
 }
 
@@ -188,4 +226,13 @@
 .input.error:focus {
     border-color: #ff0000;
     box-shadow: 0px 0px 8px rgb(255, 0, 0);
+}
+
+
+.input.disabled {   
+    cursor: not-allowed;
+}
+
+.disabled::placeholder{
+    color: #7a7a7a;
 }
