--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,8 @@
     height: 98vh;
     width: 400px;
     margin: 0 auto;
-    background-color: #1A1A1E;
+}
+
+body{
+    background-color: #2f2f2f;
 }
